syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.hronosf.summarizer";
option java_outer_classname = "SummarizerServiceProto";

package com.hronosf.summarizer;

service Summarizer {
  rpc summarize(SummarizeRequest) returns (SummarizeResponse){}
}

message SummarizeRequest{
  repeated TextToSummary textToSummary = 1;
}

message SummarizeResponse{
  repeated TextToSummary textToSummary = 1;
}

message TextToSummary{
  double id = 1;
  string text = 2 ;
  string summary = 3 ;
}
