syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.hronosf.summarizer";
option java_outer_classname = "SummarizerServiceProto";

package com.hronosf.summarizer;

service Summarizer {
  rpc summarize(SummarizeRequestDTO) returns (SummarizeResponseDTO){}
}

message SummarizeRequestDTO{
  repeated TextToSummarize textToSummarize = 1;
}

message SummarizeResponseDTO{
  repeated DataToUpdate dataToUpdate = 1;
}

message TextToSummarize{
  string id = 1;
  string text = 2;
}

message DataToUpdate{
  string id = 1;
  string summary = 2;
  int64 processedIn = 3;
}
